poner imagenes bien

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <marquee behavior="alternate" direction="right">Members</marquee>
         <div id="mienbros">
             <div class="avatar">
-                <img src="https://cdn-icons-png.flaticon.com/512/1999/1999625.png" class="avatar_img" alt="Abraham">
+                <img src="abraham_icon.png" class="avatar_img" alt="Abraham">
                 <h3>Ismael Abraham Ávila Lona</h3>
             </div>
             <div class="avatar">
-                <img src="https://cdn-icons-png.flaticon.com/512/4140/4140061.png" class="avatar_img" alt="Brian">
+                <img src="crespo_icon.png" class="avatar_img" alt="Brian">
                 <h3>Brian Yeshua Crespo Alcocer</h3>
             </div>
             <div class="avatar">
-                <img src="https://cdn-icons-png.flaticon.com/512/4139/4139981.png" class="avatar_img" alt="Mauricio">
+                <img src="mauricio_icon.png" class="avatar_img" alt="Mauricio">
                 <h3>Mauricio Zamudio Juárez</h3>
             </div>
         </div>
@@ -34,12 +34,12 @@
         <div id="crespo">
             <h1>Hi partners and teacher, my team and I, we are gonna explain what is HTML and how it Works.</h1>
             <div class="centrar">
-                <img src="https://cdn-icons-png.flaticon.com/512/1183/1183620.png" width="38%">
+                <img src="html.png" width="38%">
             </div>
             <h3> HTML is a programation code used in the field of web pages. This lenguage is considered as one of the basics to learn other types of lenguages, because it helps to understand how a code or program lenguage Works.  This code is used to create web pages and it always comes hand by hand with another two lenguages: 
                 <ul>
-                    <li>CCS also known as wather fall type page and it helps to get a better design of the web page.</li><div class="centrar"><img src="https://cdn-icons-png.flaticon.com/512/3343/3343972.png" width="25%"></div>
-                    <li>Java script.This lenguage is focused on objects, it means, put some functions as a bottons, animations, and more.</li><div class="centrar"><img src="https://cdn-icons-png.flaticon.com/512/11796/11796112.png" width="20%" id="js"></div>
+                    <li>CCS also known as wather fall type page and it helps to get a better design of the web page.</li><div class="centrar"><img src="Css_image.png" width="25%"></div>
+                    <li>Java script.This lenguage is focused on objects, it means, put some functions as a bottons, animations, and more.</li><div class="centrar"><img src="js.png" width="20%" id="js"></div>
                     <br>
                 </ul>
                 Thanks to theese three lenguages we can create a web page, but now we are going to focus only in HTML. because this is the main lenguage to give structure to our web page.
@@ -77,14 +77,14 @@
                 <table>
                     <tr>
                         <td class="texto">HTML is a native language and not all developers use frameworks, which are several languages summarized with a clearer syntax.</td>
-                        <td><img class="img_abraham" src="https://cdn-icons-png.flaticon.com/512/8743/8743589.png" alt="Error 404"></td>
+                        <td><img class="img_abraham" src="framework.png" alt="Error 404"></td>
                     </tr>
                 </table>
                 <hr>
                 <h2>Purpose</h2>
                 <table>
                     <tr>
-                        <td><img class="img_abraham" src="https://cdn-icons-png.flaticon.com/512/4402/4402598.png" alt="Error 404"></td>
+                        <td><img class="img_abraham" src="proposito.png" alt="Error 404"></td>
                         <td class="texto">The purpose of HTML is to create web pages to share information more easily.</td>
                     </tr>
                 </table>
@@ -93,14 +93,14 @@
                 <table>
                     <tr>
                         <td class="texto">Plugins are tools that help us improve our work and HTML is one of the tools that has the most.</td>
-                        <td><img class="img_abraham" src="https://cdn-icons-png.flaticon.com/512/2956/2956500.png" alt="Error 404"></td>
+                        <td><img class="img_abraham" src="plugins.png" alt="Error 404"></td>
                     </tr>
                 </table>
                 <hr>
                 <h2>History</h2>
                 <table>
                     <tr>
-                        <td><img class="img_abraham" src="https://cdn-icons-png.flaticon.com/512/1584/1584831.png" alt="Error 404"></td>
+                        <td><img class="img_abraham" src="history.png" alt="Error 404"></td>
                         <td class="texto">How it was created is also interesting and some of the more recent versions.</td>
                     </tr>
                 </table>
@@ -109,14 +109,14 @@
                 <table>
                     <tr>
                         <td class="texto">Not only HTML is used to create web pages because it would look very boring, so other languages help you.</td>
-                        <td><img class="img_abraham" src="https://cdn-icons-png.flaticon.com/512/4213/4213125.png" alt="Error 404"></td>
+                        <td><img class="img_abraham" src="aLenguaje.png" alt="Error 404"></td>
                     </tr>
                 </table>
                 <hr>
                 <h2>Semantic tags</h2>
                 <table>
                     <tr>
-                        <td><img class="img_abraham" src="https://cdn-icons-png.flaticon.com/512/11234/11234423.png" alt="Error 404"></td>
+                        <td><img class="img_abraham" src="semantic.png" alt="Error 404"></td>
                         <td class="texto">Many do not know what semantic tags are but these are very important to be able to publish our pages.</td>
                     </tr>
                     <tr>
