primera correccion ortografia

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <b>End</b>
         </marquee>
         <div id="bye">
-            <h2>Thank you partners and teacher,I houp you like our precentation.</h2>
+            <h2>Thank you partners and teacher,I hope you like our precentation.</h2>
         </div>
     </body>
 </html>
