--- a/index.html
+++ b/index.html
@@ -49,19 +49,15 @@
             <b>Development</b>
         </marquee>
         <div id="Mauricio">
-            <h2>Basic structure of HTML:</h2>
+            <h2>Basic structure of HTML: <h2>
             <h3>
-                <blockquote>Is built upon elements, tags, and attributes. Elements serve as the fundamental components of HTML documents, representing various types of content such as headings, paragraphs, images, and links. Tags, enclosed within angle brackets (&lt; &gt;), delineate the beginning and end of elements. Each element may possess one or more attributes, which provide supplementary information and are appended to the opening tags. For instance, the (&lt;img&gt;) element is employed to embed images within a webpage, with the src attribute specifying the image file's location.</blockquote>
+                <blockquote>HTML is based on elements, tags, and attributes. Elements are the building blocks of HTML documents and represent different types of content such as headings, paragraphs, images, and links. Tags (&lt; &gt;) define the beginning and end of elements. Attributes provide additional information about elements and are added to the opening tags. For example, the &lt;img&gt; element is used to embed images in a webpage, and the src attribute specifies the image file’s location.</blockquote>
             </h3>
-            <h2>Structure of an HTML document:</h2>
+            <h2>The structure of an HTML document: </h2>
             <h3>
-                <blockquote>Every HTML document commences with the document type declaration &lt;!DOCTYPE html&gt;, specifying the HTML version employed (in this instance, HTML5). Subsequent to the doctype declaration, the &lt;html&gt; element ensues, encapsulating all the content of the page. Nested within the &lt;html&gt; element lie two principal sections: &lt;head&gt; and &lt;body&gt;.</blockquote>
-            </h3>
-            <h3>
-                <blockquote>&lt;head&gt; section: This segment encompasses metadata pertaining to the document, including the page title, links to external stylesheets (&lt;link&gt;), and references to JavaScript files (&lt;script&gt;). It also encompasses other pivotal elements such as &lt;meta&gt; tags for specifying character encoding, viewport configurations, and more.</blockquote>
-            </h3>
-            <h3>
-                <blockquote>&lt;body&gt; section: This division encompasses the visible content of the webpage, encompassing text, images, links, forms, and additional elements. It serves as the arena where users interact with the webpage and where the majority of the content is showcased.</blockquote>
+                <blockquote>
+                    Every HTML document begins with the document type declaration (&lt;!DOCTYPE html&gt;), which specifies the version of HTML being used (in this case, HTML5). Next comes the &lt;html&gt; declaration, which wraps all the content on the page. Inside the &lt;html&gt; element, there are two main sections: &lt;head&gt; and &lt;body&gt;.
+                </blockquote>
             </h3>
             <div class="centrar">
                 <img src="ejemplo 1.jpeg" class="ejemplo" alt="Error 404">
@@ -131,7 +127,7 @@
             <b>End</b>
         </marquee>
         <div id="bye">
-            <h2>Thank you partners and teacher,I hope you like our precentation.</h2>
+            <h2>Thank you partners and teacher,I houp you like our precentation.</h2>
         </div>
     </body>
 </html>
